Fixed small errors in template
Syntax checkers now happy

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -124,7 +124,7 @@
 
 % *** GRAPHICS RELATED PACKAGES ***
 %
-\ifCLASSINFOpdf
+\ifCLASSINFOpdf{}
   % \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
   % \graphicspath{{../pdf/}{../jpeg/}}
@@ -391,7 +391,7 @@ Georgia Institute of Technology,
 Atlanta, Georgia 30332--0250\\ Email: see http://www.michaelshell.org/contact.html}
 \IEEEauthorblockA{\IEEEauthorrefmark{2}Twentieth Century Fox, Springfield, USA\\
 Email: homer@thesimpsons.com}
-\IEEEauthorblockA{\IEEEauthorrefmark{3}Starfleet Academy, San Francisco, California 96678-2391\\
+\IEEEauthorblockA{\IEEEauthorrefmark{3}Starfleet Academy, San Francisco, California 96678--2391\\
 Telephone: (800) 555--1212, Fax: (888) 555--1212}
 \IEEEauthorblockA{\IEEEauthorrefmark{4}Tyrell Inc., 123 Replicant Street, Los Angeles, California 90210--4321}}
 
@@ -432,7 +432,7 @@ The abstract goes here.
 %
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
-\IEEEpeerreviewmaketitle
+\IEEEpeerreviewmaketitle{}
 
 
 
@@ -554,7 +554,7 @@ The conclusion goes here.
 \section*{Acknowledgment}
 
 
-The authors would like to thank...
+The authors would like to thank\ldots
 
 
 
