Added dummy sections for rest of paper

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -524,6 +524,22 @@ Subsection text here.
 Subsubsection text here.
 
 
+\section{Background and Motivation}
+
+    Background goes here
+
+\section{CrashSimulator Approach Details}
+
+    Implementation Details Go Here
+
+\section{Evaluation}
+
+    Evaluation Goes Here
+
+\section{Related Work}
+
+    Related Work Goes Here
+
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
 % For figures, \caption should occur after the \includegraphics.
