--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -472,57 +472,38 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
     explosion of mobile computing and software as a service products applications that are completely reliant on
     well-behaved network communication are increasingly common. As a result a great deal of emphasis must be placed on
     properly dealing with faults in these network communications. Unfortunately, identifying these faults is difficult due
-    to the inability of the developer to replicate all possible application environments.
+    to the inability of the developer to replicate all possible application environments and exhaust all possible code
+    paths.
 
-    The standard approach for identifying environment-induced faults at this time is to perform a beta test by deploying the
-    application to a subset of users and gathering feedback related to faults via automated crash reporting or manual bug
-    reports. This this group of users starts small and gradually increases over many deployments as the developer eliminates
-    the most common faults and feels comfortable expanding the user base. Eventually, the application is deemed sufficiently
-    free of faults and a initial production version can be published to the full user base.
+    Existing whitebox testing tools like DART and SAGE testing tools rely on static analysis and symbolic execution of
+    code in order to determine sets of inputs that exercise particular code paths. DART symbolically executes an
+    applications source code in order to facilitate its testing. This limits DART to operating only on programs written
+    in C. SAGE improves on this strategy symbolically executing an application's x86 machine code instructions but this
+    results in an architecture based rather than programming language based limitation. CrashSimulator avoids these
+    issues by relying on transparent observation of native execution of an application.
 
-    This approach proves problematic. Deployment for testing is expensive in terms of time and cost. A
-    deployment may include the following steps:
-    \begin{enumerate}
-        \item{} A subset of users must be selected
-        \item{} The users must receive training or documentation on the application
-        \item{} The users must utilize the application for some period of time
-        \item{} Feedback regarding faults must be elicited through either automated or manual means
-        \item{} A set of faults must be derived and prioritized from the resultant feedback
-        \item{} The faults must be corrected
-    \end{enumerate}
-    These steps are repeated with successively larger groups of users until the developer decides that the application
-    is in an production ready state. Each iteration incurs the high costs associated with deployment to the users
-    elimination of the faults identified. Furthermore, there is no guarantee that the developer will receive a sufficient
-    quantity and quality of feedback required in order to render the application acceptably free of faults. This occurs
-    for a variety of reasons. First, users may not exercise uncommon code paths sufficiently to identify faults present
-    within them. This is particularly true with complex applications like web browsers or document editors. Second,
-    users may opt not to submit bug reports or may submit bug reports that are of such poor quality that they are
-    useless to the developer. Finally, and most importantly, there is no guarantee that these successive tests will
-    exhaustively cover the possible environment configurations in which the application may be required to run.
+    %% Does this need to be here? Am I just arguing against static analysis???
+    Symbolic execution is computationally expensive and can result in deviations where the symbolic execution of code
+    Doesn't accurately represent the actual execution of code.
+    %% Is this a true sentence??
+    Both tools focus on how the application under test behaves when given a particular set of inputs without taking the
+    program's environment into account. DART assumes that external functions are side effect free (I.e.\ their execution
+    does not modify program memory). Alternatively, CrashSimulator executes standard, non-instrumented versions of an
+    application and transparently injects faults via the programs interaction with the environment in which it is
+    running through system calls.
 
-    In light of these challenges, some other approach is needed to provide developers with confidence that their
-    applications are sufficiently free of faults without requiring the often onerous testing deployment cycle.
-    CrashSimulator is a tool designed to meet this need by providing automated identification of environment-induced
-    faults through simulated deviations from the normal flow of system calls an application makes to interact with its
-    environment.
+    %%% Need examples of blackbox testing tools
 
-    CrashSimulator is able to test applications in a completely black box manner. It utilizes system call traces
+    In light of these shortcomings, an alternative approach is needed to provide developers with confidence that their
+    applications are sufficiently free of environment induced faults.  CrashSimulator is a tool designed to meet this
+    need by providing automated identification of environment-induced faults through simulated deviations from the
+    normal flow of system calls an application makes to interact with its environment.
+
+    CrashSimulator is able to test applications in a completely blackbox manner. It utilizes system call traces
     collected during execution of the program to identify points for fault injection and injects the faults on
     subsequent runs using ptrace to hook the applications execution and access its memory and registers. It then
     evaluates whether the program successfully handled the injected fault or not and reports these results to the
     developer.
-
-    \hfill mds
-
-\hfill January 11, 2007
-
-\subsection{Subsection Heading Here}
-Subsection text here.
-
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
-
 
 \section{Background and Motivation}
 
