Fixed Inter-word spacing issue

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -512,6 +512,7 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
 \section{CrashSimulator Approach Details}
 
     Implementation Details Go Here
+    How do we determine what faults to inject specifically. E.g.\ do we make a syscall return -5 or -4 or whatever?
 
 \section{Evaluation}
 
