--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -429,7 +429,7 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
     observes whether or not the application continued to operate normally after the encountering the error and reports
     its findings to the developer. As a result, the developer is made aware of deficiencies in the application without
     having to go through a potentially complex and costly deployment or beta test scenario. Because CrashSimulator
-    operates using black box analysis utilities it does not require access to an application's source code.
+    operates using black-box analysis utilities it does not require access to an application's source code.
     CrashSimulator was used to analyze \emph{<<somenumber>>} commonly used open and closed source applications.  Its
     findings were compared to tickets listed in the bug tracking suites of these applications.  It was able to
     successfully identify \emph{<<somenumber>>} of bugs listed in these suites and \emph{<<someothernumber>>} of bugs
@@ -475,7 +475,7 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
     to the inability of the developer to replicate all possible application environments and exhaust all possible code
     paths.
 
-    Existing whitebox testing tools like DART and SAGE testing tools rely on static analysis and symbolic execution of
+    Existing white-box testing tools like DART and SAGE testing tools rely on static analysis and symbolic execution of
     code in order to determine sets of inputs that exercise particular code paths. DART symbolically executes an
     applications source code in order to facilitate its testing. This limits DART to operating only on programs written
     in C. SAGE improves on this strategy symbolically executing an application's x86 machine code instructions but this
@@ -492,14 +492,14 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
     application and transparently injects faults via the programs interaction with the environment in which it is
     running through system calls.
 
-    %%% Need examples of blackbox testing tools
+    %%% Need examples of black-box testing tools
 
     In light of these shortcomings, an alternative approach is needed to provide developers with confidence that their
     applications are sufficiently free of environment induced faults.  CrashSimulator is a tool designed to meet this
     need by providing automated identification of environment-induced faults through simulated deviations from the
     normal flow of system calls an application makes to interact with its environment.
 
-    CrashSimulator is able to test applications in a completely blackbox manner. It utilizes system call traces
+    CrashSimulator is able to test applications in a completely black-box manner. It utilizes system call traces
     collected during execution of the program to identify points for fault injection and injects the faults on
     subsequent runs using ptrace to hook the applications execution and access its memory and registers. It then
     evaluates whether the program successfully handled the injected fault or not and reports these results to the
