--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -524,25 +524,51 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
 
 \section{CrashSimulator Approach Details}
 
-    The trace gathering process
-        Linux -> Ktrace, Strace
-        OS X -> Dtrace
+    %%% Verify information on supported trace formats %%%
+    \textbf{The Trace Gathering Process:} The first step in CrashSimulator's operation is to gather a trace of the
+    system calls made by the application during a normal run. Because CrashSimulator's trace analysis engine is based on
+    prior work from the NetCheck supported trace gathering tools include \emph{strace} on Linux and \emph{dtrace} on OS
+    X.
 
-    Trace analysis -> read netcheck and checkapi papers
-        NetCheck -> Has model of correct network system call order
-                    Looks at order of system calls and uses heuristic algorithm and network model to determine whether
-                    a particular ordering is feasible or not
-                        Model encodes falsehoods commonly believed by developers
-                        Prioritizes system call according to correct ordering
-                        Accept, Reject, or Permanently Reject the system call
+    %%% How much information should be included about NetCheck's inner workings here? Should they just be referred to
+    %%% the NetCheck paper?
+    %%% Talk about multiple traces?
+    \textbf{Trace Analysis:} CrashSimulator's trace analysis engine is based on NetCheck. NetCheck uses two strategies
+    to identify potential fault areas from system call trace. The first is a model based simulation of the system calls
+    relevant to network communication from the input trace. System calls are organized according to a POSIX socket API
+    dependency graph and prioritized based on the order in which the system calls should be made in an ideal scenario.
+    For example, a client application should not be making a \emph{connect} system call before it has set up its
+    socket with the appropriate \emph{socket} system call. The model assumes that all system calls are atomic and that
+    they cannot happen simultaneously. This allows a definite global order to be created.
 
-    Fault Injection
-        Using ptrace to change values of system calls
-        Using ptrace to buffer and change the ordering of UDP packets
-        How do we determine what faults to inject specifically. E.g.\ do we make a syscall return -5 or -4 or whatever?
+    Once a global ordering is in place each system call is evaluated based on the previous system calls. Return values
+    and parameters passed in are taken into account. If the system call is feasible it is accepted and the next system
+    call is evaluated. If the system call is not feasible given the current system call context it is rejected and
+    logged. These rejected system calls are treated as opportunities to inject faults during the next step of the
+    process.
+
+    \textbf{Fault Injection:} Once a set of potential fault injection points has been identified CrashSimulator uses
+    \emph{ptrace} inject faults on a live execution of the program. At this point, two faults types identifiable by
+    NetCheck are supported: modification of return values from network system calls and reordering of UDP packets.
+    These faults were chosen because of high impact they can have on applications that don't handle them properly and
+    the frequency with which developers have an incorrect understanding of how these system calls can behave in an
+    imperfect environment.
+
+    \textbf{Return Value Modification:} One way CrashSimulator can inject faults into running application is to modify
+    the return values of interesting system calls identified in the previous trace analysis step. First, the
+    CrashSimulator parent application is launched and configure
+        launching of parent application
+        setup of child application under test
+        run child application
+        For for each system call determine if it is one we are interested in as determined by analysis
+            e.g.\ is this the 4th call to recv?
+        Modify EAX/RAX register after system call completion to contain new return value
+            New return value random? Smaller than present return value? Some constant -1?
+            What do we do about 32-bit vs 64-bit
 
     Reporting
-        Netcheck diagnosis engine -> How does this tie into CrashSimulator
+        NetCheck diagnosis engine -> How does this tie into CrashSimulator
+            Based on a set of rules. If simulation state matches a rule, the associated diagnosis is emitted.
 
 \section{Evaluation}
 
